--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -1,4 +1,4 @@
-<%=form_for @meals do |meal| %>
+<%=form_for @meal do |meal| %>
 	<div class="field">
 		<%= meal.label :name %> <br>
 		<%= meal.text_field :name %>
@@ -13,17 +13,28 @@
 	</div> <br>
 	<%= meal.submit "Save" %>
 <% end %>
-<!-- <br><br>
-<p>Ingredient 1</p>
-<input id="ingredient1" name="ingredient" type="text" />
 <br>
 
-<p>Ingredient 2</p>
-<input id="ingredient2" name="ingredient" type="text" />
-<br>
+<ul>
+<%= @meal.ingredients.each do |ingredient| %>
+	<li> <%= ingredient[:name] %> </li>
+<% end %>
+</ul>
 
-<p>Ingredient 3</p>
-<input id="ingredient3" name="ingredient" type="text" />
-<br>
 
-<input name="commit" type="submit" /> -->
+<table>
+	
+	<% Ingredient.all.each do |ingredient| %>
+	<tr>
+		<td align=center><%= ingredient.name %></td>
+		<td align=center>
+			<%= link_to "Add", edit_meal_path(ingredient) %>
+		</td>
+
+	</tr>
+	<% end %>
+</table>
+
+
+
+
