Add in logic for randomizing meals into a menu for the week

--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -24,7 +24,8 @@
 	<%= ingredient.number_field :quantity %>
 	<%= ingredient.submit "Add" %>
 <% end %>
-
+<br>
+<%= link_to "Create ingredients", ingredients_path %>
 
 
 
