--- a/app/views/meals/menu.html.erb
+++ b/app/views/meals/menu.html.erb
@@ -1,13 +1,25 @@
 <h1> Menu for the week </h1>
 
-<%= "Sunday meal: " + @weekMenu[0].name %> <br>
-<%= "Monday meal: " + 	@weekMenu[1].name %> <br>
-<%= "Tuesday meal: " + @weekMenu[2].name %> <br>
-<%= "Wednesday meal: " + @weekMenu[3].name %> <br>
-<%= "Thursday meal: " + @weekMenu[4].name %> <br>
-<%= "Friday meal: " + @weekMenu[5].name %> <br>
-<%= "Saturday meal: " + @weekMenu[6].name %> <br><br>
 
+<% i = 0 %>
+<% while i < 7 %>
+	<% if @weekMenu[i] %>
+		<%= @daysOfWeek[i] + ": " + @weekMenu[i].name %> <br>
+	<% else %>
+		<br><b><%= "You need to add more meals to have a menu for the rest of the week" %></b>
+	<% end %>
+	<% i += 1 %>
+<% end %>
 
-<%= link_to 'Generate alternate menu for week', menu_meals_path%> <br><br>
-<%= link_to "Cancel", meals_path %>
+<h2> Grocery list </h2>
+<% @ingQuantityHash.each do |ingredient_id, ingredient_quantity| %>
+	<ul>
+		<li><%= Ingredient.find(ingredient_id).name + ": " + ingredient_quantity.to_s %> </li>
+	</ul>
+<% end %>
+
+<br><br>
+<%= link_to 'Generate new menu', menu_meals_path%>
+<br><br>
+<%= link_to 'Return to meals', meals_path %>
+
