Add logic to determine number of meals, and set up devise for user auth

--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -26,4 +26,8 @@
 </table>
 
 <br><br>
-<%= link_to 'Generate menu for week', menu_meals_path%>
+
+<%= render 'form_menu' %>
+
+<br><br>
+<%= link_to 'List of Ingredients', ingredients_path %>
