--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -21,10 +21,11 @@
 	<%= ingredient.label "Ingredient" %>
 	<%= ingredient.collection_select(:ingredient_id, Ingredient.all, :id, :name) %>
 	<%= ingredient.label :quantity %>
-	<%= ingredient.number_field :quantity %>
+	<%= ingredient.number_field :quantity, min: 1 %>
 	<%= ingredient.submit "Add" %>
 <% end %>
 <br>
+<%= link_to "View all meals", meals_path %> <br><br>
 <%= link_to "Create ingredients", ingredients_path %>
 
 
