Add in views from Devise like sign in and registration.  Add a model for users_meals, the has-many through model that has an association for both meals and users. Modify the meals controller so a user can only view his or her meals.

--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,5 +1,9 @@
 <h1>Home</h1>
 
+<%= link_to "Sign In", new_user_session_path%>
+<%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+<br><br>
+
 <%= link_to 'New Meal', new_meal_path %>
 
 <table>
