Add login background page; update template css with Foundation styles and a top nav bar.

--- a/app/views/ingredients/_form.html.erb
+++ b/app/views/ingredients/_form.html.erb
@@ -2,6 +2,6 @@
 <%= form_for @ingredients do |ingredient| %>
 	<%= ingredient.label :name %>
 	<%= ingredient.text_field :name %>
-	<%= ingredient.submit "Save" %>
+	<%= ingredient.submit "Save", :class => "button" %>
 
 <% end %>
