--- a/app/views/meals/_form.html.erb
+++ b/app/views/meals/_form.html.erb
@@ -11,7 +11,7 @@
 		<%= meal.label :servings %></br>
 		<%= meal.number_field :servings %>
 	</div> <br>
-	<%= meal.submit "Save" %>
+	<%= meal.submit "Save", :class => "button" %>
 <% end %>
 <br>
 
