--- a/app/views/meals/_form_menu.html.erb
+++ b/app/views/meals/_form_menu.html.erb
@@ -5,6 +5,6 @@
 	<p>
     <%= m.label "Number of days needed" %>
     <%= m.number_field :num, in: 1..7 %>
-    <%= m.submit "Generate menu" %>
+    <%= m.submit "Generate menu", :class => "button"%>
   </p>
 <% end %>
