--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,35 @@
  *= require foundation_and_overrides
 
  */
+
+#bg {
+  position: fixed; 
+  top: -50%; 
+  left: -50%; 
+  width: 200%; 
+  height: 200%;
+  z-index: -100;
+}
+#bg img {
+  position: absolute; 
+  top: 0; 
+  left: 0; 
+  right: 0; 
+  bottom: 0; 
+  margin: auto; 
+  min-width: 50%;
+  min-height: 50%;
+  z-index: -100;
+}
+
+.signin-panel {
+  background-color: #FFFFFF;
+}
+
+form fieldset {
+	background-color: #FFF;
+}
+
+
+
+  
