--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+	
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,26 +11,40 @@
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-  </head>
-
-  <body>
-
-  	<% flash.each do |type, message| %>
+  <% flash.each do |type, message| %>
 	  	<div class="flash alert-box text-center <%= type %>">
 	  		<%=message %>
 	  		<a href="#" class="close"&times;</a>
 	  	</div>
   	<% end %>
 
-  	<header class="row global_header">
-  		<div class="small-12 small-centered medium-8 medium-centered large-5 large-centered columns">
-	  		<%= link_to "Meals", root_path %>
-				<% if user_signed_in? %>
-					<%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-				<% else %>
-					<%= link_to "Sign In", new_user_session_path %>
-					<%= link_to "Sign Up", new_user_registration_path %> 
-				<% end %>
+  	
+  </head>
+
+  <body>
+ 
+  	<header>
+  		<div>
+  			<nav class="top-bar" data-topbar role="navigation">
+	  			<ul class="title-area">
+	  				<li class="name">
+	  					<h1><%= link_to "Incandenza Mealplanner", root_path %></h1>
+						</li>
+					</ul>
+					<section class="top-bar-section">
+						<ul class="right">
+						<% if user_signed_in? %>
+							<li>	<%= link_to "Meals", root_path %></li>
+							<li> <%= link_to "Ingredients", ingredients_path %></li>
+							<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
+							
+						<% else %>
+							<li><%= link_to "Sign In", new_user_session_path %></li>
+							<li><%= link_to "Sign Up", new_user_registration_path %></li>
+						</ul>
+						<% end %>
+					</ul>
+				</nav>
 			</div>
   	</header>
 
