--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Cancel", meals_path %>
 
 <br><br>
-<%= render 'form' %>
+<%= render 'form_meal' %>
 
 <h2> Ingredients in this meal </h2>
 <table>
