--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
     <%= javascript_include_tag "vendor/modernizr" %>
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= csrf_meta_tags %>
-  <% flash.each do |type, message| %>
+ 		<% flash.each do |type, message| %>
 	  	<div class="flash alert-box text-center <%= type %>">
 	  		<%=message %>
 	  		<a href="#" class="close"&times;</a>
 	  	</div>
-  	<% end %>
+		<% end %>
 
   	
   </head>
@@ -34,8 +34,9 @@
 					<section class="top-bar-section">
 						<ul class="right">
 						<% if user_signed_in? %>
-							<li>	<%= link_to "Meals", root_path %></li>
-							<li> <%= link_to "Ingredients", ingredients_path %></li>
+							<li>	<%= link_to "My Meals", root_path %></li>
+							<li> <%=link_to "All Meals", index_public_meals_path %></li>
+							<li> <%= link_to "All Ingredients", ingredients_path %></li>
 							<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
 							
 						<% else %>
@@ -45,7 +46,9 @@
 						<% end %>
 					</ul>
 				</nav>
+				
 			</div>
+			
   	</header>
 
   	<div class="row collapse">
