--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
   <body>
  
   	<header>
-  		<div>
+  		<div class="sticky">
   			<nav class="top-bar" data-topbar role="navigation">
 	  			<ul class="title-area">
 	  				<li class="name">
