--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,13 +28,13 @@
   			<nav class="top-bar" data-topbar role="navigation">
 	  			<ul class="title-area">
 	  				<li class="name">
-	  					<h1><%= link_to "Incandenza Mealplanner", root_path %></h1>
+	  					<h1><%= link_to "Incandenza Mealplanner", meals_path %></h1>
 						</li>
 					</ul>
 					<section class="top-bar-section">
 						<ul class="right">
 						<% if user_signed_in? %>
-							<li>	<%= link_to "My Meals", root_path %></li>
+							<li>	<%= link_to "Your Meals", meals_path %></li>
 							<li> <%=link_to "All Meals", index_public_meals_path %></li>
 							<li> <%= link_to "All Ingredients", ingredients_path %></li>
 							<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
