--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,11 +1,11 @@
-<h1>List of ingredients</h1>
+<h2>List of ingredients</h2>
 
 <% @ingredients.each do |ingredient| %>
 <div class="ingredient">
-  <h2><%= ingredient.name %></h2>
+  <h3><%= ingredient.name %></h3>
   <ul class="functions">
     <li><%= link_to 'Edit', edit_ingredient_path(ingredient) %></li>
-    <li><%= link_to 'Destroy', ingredient, method: :delete, data: { confirm: 'Are you sure?' } %></li>
+    <li><%= link_to 'Delete', ingredient, method: :delete, data: { confirm: 'Are you sure?' } %></li>
   </ul>
   <br class="clear" />
 </div>
