--- a/app/views/meals/_form_meal.html.erb
+++ b/app/views/meals/_form_meal.html.erb
@@ -11,7 +11,9 @@
 		<%= meal.label :servings %></br>
 		<%= meal.number_field :servings %>
 	</div> <br>
-	<%= meal.submit "Save", :class => "button" %>
+	<% if @meal.users.all.include?(@user) %>
+		<%= meal.submit "Save", :class => "button" %>
+	<% end %>
 <% end %>
 <br>
 
