--- a/app/views/meals/edit.html.erb
+++ b/app/views/meals/edit.html.erb
@@ -11,18 +11,22 @@
 	<tr>
 		<td> <%= meals_ingredient.ingredient.name %> </td>
 		<td> <%= meals_ingredient.quantity %> </td>
-		<td> <%= link_to "Delete", [meals_ingredient.meal, meals_ingredient], method: :delete %> </td>
+		<% if @meal.users.all.include?(@user) %>
+			<td> <%= link_to "Delete", [meals_ingredient.meal, meals_ingredient], method: :delete %> </td>
+		<% end %>
+
 	</tr>
 <% end %>
 </table>
-
-<h2> Add ingredients to this meal </h2>
-<%= form_for([@meal, @meal.meals_ingredients.build]) do |ingredient| %>
-	<%= ingredient.label "Ingredient" %>
-	<%= ingredient.collection_select(:ingredient_id, Ingredient.all, :id, :name) %>
-	<%= ingredient.label :quantity %>
-	<%= ingredient.number_field :quantity, min: 1 %>
-	<%= ingredient.submit "Add", :class => "button" %>
+<% if @meal.users.all.include?(@user) %>
+	<h2> Add ingredients to this meal </h2>
+	<%= form_for([@meal, @meal.meals_ingredients.build]) do |ingredient| %>
+		<%= ingredient.label "Ingredient" %>
+		<%= ingredient.collection_select(:ingredient_id, Ingredient.all, :id, :name) %>
+		<%= ingredient.label :quantity %>
+		<%= ingredient.number_field :quantity, min: 1 %>
+		<%= ingredient.submit "Add", :class => "button" %>
+	<% end %>
 <% end %>
 <br>
 <%= link_to "View all meals", meals_path %> <br><br>
