Make changes to Foundation overrides

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   <body>
  
   	<header>
-  		
+  		<h3 id='greeting'></h3>
   		
   		<div class="sticky">
   			<nav class="top-bar" data-topbar role="navigation">
