--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,4 +1,4 @@
-<h2>List of ingredients</h2>
+<h2 class="page-title">List of ingredients</h2>
 
 <% @ingredients.each do |ingredient| %>
 <div class="ingredient">
