Add in About Page, routes to that page, and images shown on that page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -44,6 +44,38 @@ form fieldset {
   z-index: 10;
 }
 
+.employee {
+  color: blue;
+}
+
+.advisor {
+  color: red;
+}
+
+img {
+  width: 15em;
+  height: auto;
+}
+
+.error-message {
+  color: red;
+}
+
+.highlighted-image {
+  padding: 1px;
+  border: 2px solid blue;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.flex-item {
+  text-align: center;
+}
+
 
 
   
