--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,9 +40,11 @@
 							<li>	<%= link_to "Your Meals", meals_path %></li>
 							<li> <%=link_to "All Meals", index_public_meals_path %></li>
 							<li> <%= link_to "All Ingredients", ingredients_path %></li>
+							<li> <%= link_to "About Us", static_pages_about_path, method: :get %></li>
 							<li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
 							
 						<% else %>
+							<li> <%= link_to "About Us", static_pages_about_path %></li>
 							<li><%= link_to "Sign In", new_user_session_path %></li>
 							<li><%= link_to "Sign Up", new_user_registration_path %></li>
 						</ul>
