Change Cooper from a Nat Gas Investor to a Nat Gas Magnate

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -39,7 +39,7 @@
     		<div class='investor flex-item'>
     			<%= image_tag "cooper.png" %>
     			<h3>Cooper</h3>
-    			<p>Natural Gas Investor</p>
+    			<p>Natural Gas Magnate</p>
     		</div>
     </div>
     <div id="footer"></div>
